@@ -1,6 +1,8 @@
 0.20 Beta 1 - In development
 ----------------------------
 
+ * qrun:
+   * Fixed '--execute' mode. (Bug #590229, Simon Kersey) 
 
 0.19.1 - In development
 -----------------------
